<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customer_background"
    tools:context=".CustomerEditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_customer"
            android:textSize="24dp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_name"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_marginLeft="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/name"
                    android:background="@drawable/edt_txt_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:hint="@string/cus_name"
                    android:padding="15dp"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_nic"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/nic"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:hint="@string/cus_nic"
                    android:background="@drawable/edt_txt_bg"
                    android:padding="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_address"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address"
                    android:layout_marginTop="10dp"
                    android:lines="3"
                    android:background="@drawable/edt_txt_bg"
                    android:gravity="top"
                    android:lineHeight="18dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:hint="@string/cus_address"
                    android:padding="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_pax"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/pax"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:background="@drawable/edt_txt_bg"
                    android:hint="@string/cus_pax"
                    android:padding="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cus_contact"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/contact"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/edt_txt_bg"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:hint="@string/cus_contact"
                    android:padding="15dp"
                    />

                <Button
                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update_customer"
                    android:textSize="15dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000"
                    android:background="@color/colorPrimaryDark"
                    />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</LinearLayout>