<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/roomsbg"
    tools:context=".UpdateRoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/header_icon"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginLeft="10dp"
            android:textSize="24dp"
            android:fontFamily="@font/arbutus_slab"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_rooms_str"
            android:textSize="24dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/arbutus_slab"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:fillViewport="true">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/room_no_str"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/room_number"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="16dp"
                        android:hint="@string/room_no_str"
                        android:padding="15dp"
                        android:background="@drawable/input_bg"
                        />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/floor_str"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/floor"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="16dp"
                        android:hint="@string/floor_str"
                        android:padding="15dp"
                        android:background="@drawable/input_bg"
                        />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/price_str"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/price"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="16dp"
                        android:hint="@string/price_str"
                        android:padding="15dp"
                        android:background="@drawable/input_bg"
                        />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/note_str"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/note"
                        android:layout_marginTop="10dp"
                        android:lines="3"
                        android:gravity="top"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="16dp"
                        android:hint="@string/note_str"
                        android:padding="15dp"
                        android:background="@drawable/input_bg"
                        />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/type_str"
                        android:textSize="18dp"
                        android:textColor="#000"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"/>
                    <Spinner
                        android:id="@+id/type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/input_bg"
                        android:textSize="16dp"
                        android:layout_marginBottom="20dp"
                        android:padding="15dp"
                        android:layout_marginRight="20dp"/>

                </TableLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:paddingTop="5dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/update_room"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update_rooms_str"
                    android:textSize="15dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#fff"
                    android:background="@color/colorPrimary"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>